--- a/site.css
+++ b/site.css
@@ -3,50 +3,6 @@ body {
   margin: 0;
 }
 
-#maia-signature {
-  clear: both;
-  float: right;
-  margin-right: 20px;
-  margin-top: -4px;
-  max-width: 978px;
-  min-height: 4px;
-}
-
-#maia-signature:before {
-  border-left: 35px solid #ffa900;
-  border-right: 34px solid #00a753;
-  content: "";
-  float: right;
-  height: 4px;
-}
-
-#maia-signature:after {
-  border-left: 34px solid #0089fa;
-  border-right: 35px solid #ff002b;
-  content: "";
-  float: right;
-  height: 4px;
-}
-
-a {
-  color: #6487f6;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.cf:before,
-.cf:after {
-  content: " ";
-  display: table;
-}
-
-.cf:after {
-  clear: both;
-}
-
 body {
   -moz-osx-font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
@@ -56,6 +12,15 @@ body {
   font-size: 16px;
   position: relative;
   padding-bottom: 80px;
+}
+
+a {
+  color: #6487f6;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 h1 {
@@ -114,11 +79,14 @@ p b {
   transition: height 200ms ease;
 }
 
-header .statement {
-  margin: 0 auto;
-  max-width: 650px;
-  padding: 70px 20px 0 20px;
-  text-align: center;
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+}
+
+.social .fb_iframe_widget {
+  line-height: 0;
 }
 
 .parallax {
@@ -178,17 +146,12 @@ header .statement {
   }
 }
 
-header.banner p {
-  color: #fff;
-}
-
 header {
-  height: 370px;
-}
-
-header .image img {
-  margin: 30px auto;
-  max-width: 100%;
+  height: 300px;
+  margin: 0 auto;
+  max-width: 650px;
+  padding: 70px 20px 0 20px;
+  text-align: center;
 }
 
 header h1 {
@@ -207,16 +170,6 @@ section .arrow {
   width: 29px;
 }
 
-header table {
-  border-collapse: collapse;
-  height: 100%;
-  width: 100%;
-}
-
-header.banner table tr td {
-  vertical-align: middle;
-}
-
 section.section-alt {
   background: #f5f5f5;
 }
@@ -224,19 +177,6 @@ section.section-alt {
 section {
   padding: 40px 15px 30px;
   text-align: center;
-}
-
-footer {
-  background: linear-gradient(#ececec,#f9f9f9 90%,#fff);
-  border-top: 1px solid #eee;
-  font-size: 11px;
-  line-height: 2.19;
-  list-style: none;
-  padding: 10px 15px;
-}
-
-footer select {
-  float: right;
 }
 
 ul.blocks {
@@ -252,34 +192,6 @@ ul.blocks li {
   padding: 0;
 }
 
-footer ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-footer ul li {
-  display: inline;
-}
-
-footer ul li:before {
-  content: 'Â·';
-  padding: 0 3px;
-}
-
-footer ul li:first-child:before {
-  content: '';
-  padding-left: 0;
-}
-
-footer ul li:first-child a {
-  margn-left: 0;
-}
-
-footer ul li a {
-  margin-left: 5px;
-}
-
 section.behind ul.blocks li {
   -moz-transition: all 200ms ease;
   -webkit-transition: all 200ms ease;
@@ -291,7 +203,6 @@ section.behind ul.blocks li img {
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
 }
-
 
 section.behind {
   padding-bottom: 0;
@@ -344,7 +255,7 @@ section.help .newsletter form {
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
 }
 
-form input[type=email] {
+section.help .newsletter input[type=email] {
   display: inline-block;
   height: 40px;
   width: 250px;
@@ -354,21 +265,19 @@ form input[type=email] {
 
 }
 
-form input[type=submit] {
+section.help .newsletter input[type=submit] {
   background: #969dad;
   color: #fff;
   border: 0;
-  border-radius: .2em;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);  
   -webkit-font-smoothing: antialiased;
   padding: .9em 1em;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 16px;
+  cursor: pointer;
 }
 
-
-.anim-activated .anim-slide-in {
+.anim-slide-in {
   -moz-animation-duration: .5s;
   -moz-animation-iteration-count: once;
   -moz-animation-name: slide-in;
@@ -386,7 +295,7 @@ form input[type=submit] {
   animation-fill-mode: forwards;
 }
 
-.anim-activated .anim-slow,
+.anim-slow,
 .anim-slow {
   -moz-animation-duration: 1s;
   -webkit-animation-duration: 1s;
