--- a/site_jan7.css
+++ b/site_jan7.css
@@ -90,7 +90,7 @@ p b {
 }
 
 .parallax {
-  background-image: url(cph.jpg);
+  background-image: url(images/cph.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
